# webassembly-test

./: CMakeLists.txt  CMakePresets.json  Depedencies.cmake  index.html
build-web/: worker.html  worker.js  worker.wasm
public/: script.js
public/helper/: loadWASM.js
src/: CMakeLists.txt  add.cpp  main.cpp  stream.cpp
